added background image and changed text and background colors

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
    <head>
       <title>A Beginner's Guide to Keyboard Customization</title>
+      <link href="styles.css" rel="stylesheet" type = "text/css" />
    </head>
 
    <body>
@@ -9,14 +10,12 @@
          <h1>A Beginner's Guide to Keyboard Customization</h1>
          <h3>written by Tori Rodgers</h3>
          <p>August 14, 2024</p>
-         <hr />
-
       </header>
 
       <main>
          <img src="./images/pexels-jethro-header-image.jpg" width="400px" style="float: right;"/>
          <article>
-            <h2>Let's start with the basics!</h2>
+            <h2 id="mainHeading">Let's start with the basics!</h2>
 
             <section>
                <h3>Structure of a Keyboard</h3>
@@ -32,7 +31,7 @@
 
             <section>
                <h3>Start Small!</h3>
-               <p>It can be really intimidating to get started - that's totally normal! There are so many options out there that building a keyboard from scratch seems like a huge project (not to mention expensive). <br> 
+               <p id="testP" class="funParagraph">It can be really intimidating to get started - that's totally normal! There are so many options out there that building a keyboard from scratch seems like a huge project (not to mention expensive). <br> 
                   So instead of starting at the bottom, try making customizations on a pre-assembled keyboard! Changing out some of the parts on a pre-made can give you a better idea of your preferences before you drop a ton of money on high-end materials. Keycaps are the easiest customization to make and have a big visual impact.  </p>
             </section>
 
@@ -51,7 +50,6 @@
          </article>
       </main>
       <footer>
-         <hr />
          <small>&copy; 2024 Tori Rodgers</small>
       </footer>
    </body>
