added switches image, centered my build image, assignment passed all 7 tests

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <body>
       <header>
          <h1>A Beginner's Guide to Keyboard Customization</h1>
-         <h3>written by Tori Rodgers</h3>
-         <p>August 14, 2024</p>
+         <h2 id="written">written by Tori Rodgers</h2>
+         <p id="date">August 14, 2024</p>
       </header>
 
       <main>
@@ -24,6 +24,7 @@
                <h4>The PCB and Plate</h4>
                <p>Inside the case, there are two parts: The PCB (printed circuit board) and the plate. The PCB connects to your computer, the plate is there to protect it from stray hairs, crumblies, etc.<br>Plates come in many different materials which affect the sound of the keys as you press them.</p>
                <h4>Switches</h4>
+               <img src="images/pretty-switches.jpg" width= "500px" class="switches" style="float: right;"/>
                <p>The most intricate part of the keyboard! The switches are what your keycaps are attached to and connect to the PCB to tell your computer what key you're pressing. <br> <u>There are 3 main types of switches:</u> linear, tactile, &amp; clicky. <br> Each type of switch as it's own feel and sound. Linear switches don't provide an extra sound or tactile feedback (think laptop keys). Tactile switches have a tactile feedback with each press, and Clicky switches make an extra click when pressed. <br> Picking a type of switch is totally up to your preference and needs. </p>
                <h4>Keycaps</h4>
                <p>Finally, the keycaps! Arguably the most fun part of customizing a keyboard. They come in endless styles and colors. Finding the right keycap profile can make a huge difference in your typing in experience!</p>
@@ -31,19 +32,20 @@
 
             <section>
                <h3>Start Small!</h3>
-               <p id="testP" class="funParagraph">It can be really intimidating to get started - that's totally normal! There are so many options out there that building a keyboard from scratch seems like a huge project (not to mention expensive). <br> 
+               <p>It can be really intimidating to get started - that's totally normal! There are so many options out there that building a keyboard from scratch seems like a huge project (not to mention expensive). <br> 
                   So instead of starting at the bottom, try making customizations on a pre-assembled keyboard! Changing out some of the parts on a pre-made can give you a better idea of your preferences before you drop a ton of money on high-end materials. Keycaps are the easiest customization to make and have a big visual impact.  </p>
             </section>
 
             <section>
                <h3>My Build</h3>
-               <p>For my first build, I bought the 
+               <p id="testP" class="funParagraph">For my first build, I bought the 
                   <a href="https://a.co/d/c2VMPq6" target="_blank">Royal Kludge RK87 75%</a> on Amazon. Royal Kludge makes a lot of different sizes of boards and they're easily customizable! <br>
                   I bought 
                   <a href="https://a.co/d/gOrZgs8" target="_blank">these keycaps</a> on Amazon as well. They have the classic Cherry profile and are made out of PBT which is more durable than ABS (you can read more about the differences
                   <a href="https://www.corsair.com/us/en/explorer/gamer/keyboards/abs-vs-pbt-keycaps/" target="_blank">here</a>). <br>
                   Lastly, my switches are the 
                   <a href="https://keebworks.com/gazzew-boba-u4t/" target="_blank">Gazzew Boba U4T</a>. I love that they're tactile and they make a nice low sound when pressed!
+                     <img src="images/2024-08-14-15-47-14-752.jpg" width= "500px" class="center"/>
                </p>
             </section>
 
